@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-Typemap
 
 {{$NEXT}}
+          - Allow a + prefex in module names
 
 0.004     2023-09-02 20:39:54+02:00 Europe/Brussels
           - Only call minimum_pxs if supported
